# GameEngine

./: .gitignore  CMakeLists.txt  README.md
assets/materials/: brick.mat  suzanne.mat
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt  config.h.in
engine/source/: Application.cpp  Application.h  Common.h  Engine.cpp  Engine.h  eng.h
engine/source/debug/: MyImGui.cpp  MyImGui.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/gui/: Gui.cpp  Gui.h
engine/source/input/: inputManager.cpp  inputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/physics/: RigidBody.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PlayerControllerComponent.cpp  PlayerControllerComponent.h
source/: Game.cpp  Game.h  TestObject.cpp  TestObject.h  main.cpp
